# FYP

./: func.py  jupiter_File.ipynb  model_utilies.py  pyproject.toml  requirements.txt  routes.py
saved_models/: LSTM_model.h5  LSTM_model.json
saved_tokenizer/: tokenizer.pkl
static/: main.css
templates/: add_post.html  edit_post.html  home.html  layout.html
