[tool.poetry]
name = "Sentiment Analysis using flask "
version = "0.1.0"
description = ""
authors = ["saad-ali06 <saadshahzad818@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = { version = "^2.15.0.post1", optional = true }
flask = "^3.0.2"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
keras = "^3.0.5"
flask-wtf = "^1.2.1"
pymongo = "^4.6.2"
flask-bcrypt = "^1.0.1"
email-validator = "^2.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
